# thief_opengl

opengl/learn_opengl/: .clang-format  .gitignore  CMakeLists.txt  default.nix  hello_triangle.cpp  readme.org
opengl/learn_opengl/src/: create_window.cpp  shaders.cpp  textures.cpp  textures2.cpp
opengl/learn_opengl/src/shader/: fragment1.glsl  fragment1_material.glsl  fragment2.glsl  fragment3_phong_light.glsl  fragment4_phong_light.glsl  fragment5.glsl  vertex1_phong_light.glsl  vertex2.glsl  vertex2_phong_light.glsl  vertex3_phong_light.glsl
opengl/learn_opengl/src/shaders/: fragment2.glsl  vertex1.glsl  vertex3.glsl
opengl/learn_opengl/src/tutorials/: create_window.cpp  hello_triangle.cpp  light.cpp  light_phong.cpp  light_phong2.cpp  light_phong3.cpp  light_phong4.cpp  material.cpp  shaders.cpp  shaders_new.cpp  textures.cpp  textures2.cpp  transform.cpp  transform2.cpp  transform_with_camera_class.cpp
opengl/learn_opengl/src/utils/: camera.hpp  light.hpp  material.hpp  shader_helper.cpp  shader_helper.hpp
opengl/learn_opengl/utils/: shader_helper.cpp  shader_helper.hpp  utils.cpp  utils.hpp
